crates/cli/tests/snapshots/if_else_empty_list__fix_1bff00cf4afdfb115f6ed87f10181a454a15889a332d9fc8f27dd1f377af51a5.snap
---
source: crates/cli/tests/if_else_empty_list.rs
expression: "\"if cond then [\\n  foo\\n  bar\\n  baz\\n] else []\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,6 @@
-if cond then [
+lib.optionals cond [
   foo
   bar
   baz
-] else []
+]
