crates/cli/tests/snapshots/if_else_empty_list__fix_50d1ff9ca773533aaaf40f2e4dcbe819abff52c45b4fe53fea0dd711e76ea14d.snap
---
source: crates/cli/tests/if_else_empty_list.rs
expression: "\"if config.foo.enable then [ foo bar ] else []\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,2 +1,2 @@
-if config.foo.enable then [ foo bar ] else []
+lib.optionals config.foo.enable [ foo bar ]
