crates/cli/tests/snapshots/if_else_empty_list__fix_eb989fa2966ab8f51e3c2f4fecef079244b029a6575a8187a82cc5e97b321ede.snap
---
source: crates/cli/tests/if_else_empty_list.rs
expression: "\"if a && b then [ foo ] else []\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,2 +1,2 @@
-if a && b then [ foo ] else []
+lib.optionals (a && b) [ foo ]
