crates/cli/tests/snapshots/if_else_empty_list__lint_50d1ff9ca773533aaaf40f2e4dcbe819abff52c45b4fe53fea0dd711e76ea14d.snap
---
source: crates/cli/tests/if_else_empty_list.rs
expression: "\"if config.foo.enable then [ foo bar ] else []\\n\""
---
[33] Warning: Prefer `lib.optionals` over `if cond then [...] else []`
   ╭─[<temp_file_path>:1:1]
   │
 1 │ if config.foo.enable then [ foo bar ] else []
   │ ──────────────────────┬──────────────────────  
   │                       ╰──────────────────────── Use lib.optionals to express conditional list inclusion
───╯
