crates/cli/tests/snapshots/if_else_empty_list__lint_eb989fa2966ab8f51e3c2f4fecef079244b029a6575a8187a82cc5e97b321ede.snap
---
source: crates/cli/tests/if_else_empty_list.rs
expression: "\"if a && b then [ foo ] else []\\n\""
---
[33] Warning: Prefer `lib.optionals` over `if cond then [...] else []`
   ╭─[<temp_file_path>:1:1]
   │
 1 │ if a && b then [ foo ] else []
   │ ───────────────┬──────────────  
   │                ╰──────────────── Use lib.optionals to express conditional list inclusion
───╯
